--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,47 +1,45 @@
 <h1>Burgers To Pick </h1>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 text-center">
-                <ul>
-                    {{#each burger_data}}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 text-center">
+            <ul>
+                {{#each burger_data}}
 
-                    {{#unless this.devoured}}
-                    <li>
-                        <p>{{this.id}}.{{this.burger_name}} </p>
-                        <form class="devour-form">
-                            <input type="hidden" class="burger_id" value={{this.id}}>
-                            <button type="submit" class="devour">Devour This!</button>
-                        </form>
-                        
+                {{#unless this.devoured}}
+                <li>
+                    <p>{{this.id}}.{{this.burger_name}} </p>
+                    <form class="devour-form">
+                        <input type="hidden" class="burger_id" value={{this.id}}>
+                        <button type="submit" class="devour">Devour This!</button>
+                    </form>
 
-                    </li>
-                    
-                    {{/unless}}
-                    {{/each}}
-                </ul>
-            </div>
-               <div class="col-md-6 text-center">
-                <ul>
-                    {{#each burger_data}}
 
-                    {{#if this.devoured}}
-                    <li>
-                        <p>{{this.id}}.{{this.burger_name}} </p>
+                </li>
 
-                    </li>
-                    
-                    {{/if}}
-                    {{/each}}
-                </ul>
-            </div>
+                {{/unless}}
+                {{/each}}
+            </ul>
+        </div>
+        <div class="col-md-6 text-center">
+            <ul>
+                {{#each burger_data}}
+
+                {{#if this.devoured}}
+                <li>
+                    <p>{{this.id}}.{{this.burger_name}} </p>
+
+                </li>
+
+                {{/if}}
+                {{/each}}
+            </ul>
         </div>
     </div>
+</div>
 
 
-    <form method="POST" action="burgers/create">
-        <textarea type="text" name="burger_name" id="burger_id"></textarea>
-        <button type="submit"> Add a Burger </button>
-
-
-    </form>
+<form method="POST" action="burgers/create">
+    <input type="text" name="burger_name" id="burger_id"></input>
+    <button type="submit"> Add a Burger </button>
+</form>
