--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
 
    
 
-    <script src="./assets/javascript/script.js"></script>
+    <script src="/assets/javascript/script.js"></script>
 </body>
 
 </html>
